crates/ra_ide_api/src/completion/snapshots/completion_item__dont_show_both_completions_for_shadowing.snap
---
created: "2019-04-04T14:52:24.531844100Z"
creator: insta@0.7.4
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "bar",
        source_range: [126; 126),
        delete: [126; 126),
        insert: "bar",
        kind: Binding
    },
    CompletionItem {
        label: "foo",
        source_range: [126; 126),
        delete: [126; 126),
        insert: "foo()$0",
        kind: Function,
        detail: "fn foo()"
    }
]
