crates/ra_ide_api/src/completion/snapshots/completion_item__extern_prelude.snap
---
created: "2019-05-23T22:23:35.123197049Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "other_crate",
        source_range: [4; 4),
        delete: [4; 4),
        insert: "other_crate",
        kind: Module,
    },
]
