crates/ra_ide_api/src/completion/snapshots/completion_item__filter_postfix_completion2.snap
---
created: "2019-01-22T14:45:00.820642200+00:00"
creator: insta@0.4.0
expression: kind_completions
source: "crates\\ra_ide_api\\src\\completion\\completion_item.rs"
---
[
    CompletionItem {
        completion_kind: Postfix,
        label: "not",
        kind: None,
        detail: None,
        documentation: None,
        lookup: None,
        insert_text: Some(
            "!bar"
        ),
        insert_text_format: Snippet,
        source_range: [76; 77),
        text_edit: Some(
            TextEdit {
                atoms: [
                    AtomTextEdit {
                        delete: [72; 76),
                        insert: ""
                    }
                ]
            }
        )
    },
    CompletionItem {
        completion_kind: Postfix,
        label: "if",
        kind: None,
        detail: None,
        documentation: None,
        lookup: None,
        insert_text: Some(
            "if bar {$0}"
        ),
        insert_text_format: Snippet,
        source_range: [76; 77),
        text_edit: Some(
            TextEdit {
                atoms: [
                    AtomTextEdit {
                        delete: [72; 76),
                        insert: ""
                    }
                ]
            }
        )
    },
    CompletionItem {
        completion_kind: Postfix,
        label: "match",
        kind: None,
        detail: None,
        documentation: None,
        lookup: None,
        insert_text: Some(
            "match bar {\n${1:_} => {$0\\},\n}"
        ),
        insert_text_format: Snippet,
        source_range: [76; 77),
        text_edit: Some(
            TextEdit {
                atoms: [
                    AtomTextEdit {
                        delete: [72; 76),
                        insert: ""
                    }
                ]
            }
        )
    },
    CompletionItem {
        completion_kind: Postfix,
        label: "while",
        kind: None,
        detail: None,
        documentation: None,
        lookup: None,
        insert_text: Some(
            "while bar {\n$0\n}"
        ),
        insert_text_format: Snippet,
        source_range: [76; 77),
        text_edit: Some(
            TextEdit {
                atoms: [
                    AtomTextEdit {
                        delete: [72; 76),
                        insert: ""
                    }
                ]
            }
        )
    }
]
