crates/ra_ide_api/src/completion/snapshots/completion_item__generic_params.snap
---
created: "2019-05-23T22:23:35.123825399Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "T",
        source_range: [44; 44),
        delete: [44; 44),
        insert: "T",
        kind: TypeParam,
    },
    CompletionItem {
        label: "quux",
        source_range: [44; 44),
        delete: [44; 44),
        insert: "quux()$0",
        kind: Function,
        detail: "fn quux<T>()",
    },
]
