crates/ra_ide_api/src/completion/snapshots/completion_item__generic_params_in_struct.snap
---
created: "2019-05-23T22:23:35.130778739Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "T",
        source_range: [46; 46),
        delete: [46; 46),
        insert: "T",
        kind: TypeParam,
    },
    CompletionItem {
        label: "X",
        source_range: [46; 46),
        delete: [46; 46),
        insert: "X",
        kind: Struct,
    },
]
