crates/ra_ide_api/src/completion/snapshots/completion_item__inserts_parens_for_function_calls1.snap
---
created: "2019-05-23T22:23:35.156115632Z"
creator: insta@0.8.1
source: crates/ra_ide_api/src/completion/completion_item.rs
expression: kind_completions
---
[
    CompletionItem {
        label: "main",
        source_range: [53; 56),
        delete: [53; 56),
        insert: "main()$0",
        kind: Function,
        detail: "fn main()",
    },
    CompletionItem {
        label: "no_args",
        source_range: [53; 56),
        delete: [53; 56),
        insert: "no_args()$0",
        kind: Function,
        detail: "fn no_args()",
    },
]
